<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive</name>
  <version>2.0.0</version>
  <description>
    Controller for a differential drive robot.
    ROS 2 port of diff_drive (https://github.com/merose/diff_drive)
  </description>
  <maintainer email="ben.bongalon@gmail.com">Ben Bongalon</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
